--- a/aro_quiver/admin/main.css
+++ b/aro_quiver/admin/main.css
@@ -1,6 +1,6 @@
 ﻿@font-face{
     font-family: Genosans;
-    src: url("../fonts/GeosansLight.ttf");
+    src: url("../fonts/GeosansLight.ttf"), url("./fonts/GeosansLight.ttf");
 }
 
 body{
