--- a/aro_quiver/compiler/public/resources/index.css
+++ b/aro_quiver/compiler/public/resources/index.css
@@ -1,6 +1,6 @@
-﻿@font-face{
+@font-face{
     font-family: Geosans;
-    src: url("/admin/fonts/GeosansLight.ttf")
+    src: url("/resources/fonts/GeosansLight.ttf")
 }
 
 body {
