--- a/aro_quiver/admin/public/main.css
+++ b/aro_quiver/admin/public/main.css
@@ -66,7 +66,7 @@ nav > ul > li{
     width: 100%;
 }
 
-#toolbar:hover{
+#toolbar:hover, .fakeHover{
     max-height: 100vh;
     width: 70px;
     transition: all 1s;
@@ -175,4 +175,30 @@ iframe{
     font-size: 30px;
     border: 1px solid #DDD;
     padding: 0px 30px;
+}
+
+/*
+    --Homepage Buttons
+*/
+.homeButton {
+    display: inline-block;
+    border: 2px solid white;
+    color: white;
+    padding: 1em 1.25em;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    text-decoration: none;
+    cursor: pointer;
+    width: 140px;
+    font-size: 0.8em;
+    line-height: 1.3em;
+    opacity: 1;
+    transition: opacity .25s ease-in-out;
+    -moz-transition: opacity .25s ease-in-out;
+    -webkit-transition: opacity .25s ease-in-out
+}
+
+.homeButton:hover {
+    opacity: 0.5;
 }
