--- a/aro_quiver/admin/public/main.css
+++ b/aro_quiver/admin/public/main.css
@@ -106,6 +106,25 @@ nav > ul > li{
     float: left;
 }
 
+#checkmark{
+    background-image: url('icons/pages/done.png');
+    height: 30px;
+    width: 30px;
+    float: left;
+    margin: 20px 155px;
+    background-size: cover;
+    opacity: 0;
+    transition: all 1s .5s;
+}
+
+#checkmark.appear{
+    opacity: 1;
+}
+
+.rotate{
+        transition: all 1s !important;
+        transform: rotate(1080deg);
+}
 
 
 #logo{
@@ -218,11 +237,18 @@ form > .mce-container{
 
 .editorbuttoncontainer > input{
     height: 50px;
-    margin: 10px auto;
+    margin: 20px auto;
     width: 200px;
     color: white;
     background: none;
-    border: none;
+    border: 1px solid white;
+    padding: 10px;
     font-family: Genosans;
     font-size: 1.2em;
+    transition: all 1s;
+    cursor: pointer;
+}
+
+.editorbuttoncontainer > input:hover{
+    background: rgba(255, 255, 255, .2);
 }
