--- a/aro_quiver/compiler/templates/other-template/main.html
+++ b/aro_quiver/compiler/templates/other-template/main.html
@@ -13,7 +13,7 @@
                 <ul>
                     <li>Home</li>
                     <li>About</li>
-                    <li>Acedemics</li>
+                    <li>Academics</li>
                     <li>Writings</li>
                     <li>Research</li>
                 </ul>
